src/antlr/ArrobaParser.js
// Generated from /Users/tobe/Source/Node.js/arroba2js/Arroba.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ArrobaListener = require('./ArrobaListener').ArrobaListener;
var ArrobaVisitor = require('./ArrobaVisitor').ArrobaVisitor;

var grammarFileName = "Arroba.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "'=>'", "'<-'", "'->'", "':'", "','", 
                     "'{'", "'}'", "'.'", "'='", "'('", "')'", "';'", "'['", 
                     "']'", "'^'", "'+'", "'-'", "'%'", "'*'", "'/'", "'$'", 
                     "'&'", "'|'", null, "'<<'", "'>>'", "'xor'", "'if'", 
                     "'elif'", "'else'", null, null, null, null, null, null, 
                     null, null, null, "'false'", "'true'", "'await'", "'break'", 
                     "'catch'", "'extern'", null, "'local'", null, "'throw'", 
                     "'try'", "'while'" ];

var symbolicNames = [ null, "SL_CMT", "WS", "ARR_FAT", "ARR_L", "ARR_R", 
                      "COLON", "COMMA", "CURLY_L", "CURLY_R", "DOT", "EQUALS", 
                      "PAREN_L", "PAREN_R", "SEMI", "SQUARE_L", "SQUARE_R", 
                      "CARET", "PLUS", "MINUS", "MODULO", "TIMES", "DIVIDE", 
                      "SUMMA", "BITWISE_AND", "BITWISE_OR", "BITWISE_NOT", 
                      "BITWISE_SHL", "BITWISE_SHR", "BITWISE_XOR", "IF", 
                      "ELIF", "ELSE", "IS", "NOT", "EXCLAMATION", "AND", 
                      "OR", "LT", "LTE", "GT", "GTE", "FALSE", "TRUE", "AWAIT", 
                      "BREAK", "CATCH", "EXTERN", "FN", "LOCAL", "RET", 
                      "THROW", "TRY", "WHILE", "DBL", "HEX", "INT", "RAW_STRING", 
                      "STRING", "REGEX_LITERAL", "ID" ];

var ruleNames =  [ "compilationUnit", "stmt", "assignStmt", "exprStmt", 
                   "breakStmt", "retStmt", "throwStmt", "tryStmt", "whileStmt", 
                   "externStmt", "ifStmt", "ifBlock", "elifBlock", "elseBlock", 
                   "expr", "paramSpec", "arithmeticOperator", "booleanOperator" ];

function ArrobaParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ArrobaParser.prototype = Object.create(antlr4.Parser.prototype);
ArrobaParser.prototype.constructor = ArrobaParser;

Object.defineProperty(ArrobaParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ArrobaParser.EOF = antlr4.Token.EOF;
ArrobaParser.SL_CMT = 1;
ArrobaParser.WS = 2;
ArrobaParser.ARR_FAT = 3;
ArrobaParser.ARR_L = 4;
ArrobaParser.ARR_R = 5;
ArrobaParser.COLON = 6;
ArrobaParser.COMMA = 7;
ArrobaParser.CURLY_L = 8;
ArrobaParser.CURLY_R = 9;
ArrobaParser.DOT = 10;
ArrobaParser.EQUALS = 11;
ArrobaParser.PAREN_L = 12;
ArrobaParser.PAREN_R = 13;
ArrobaParser.SEMI = 14;
ArrobaParser.SQUARE_L = 15;
ArrobaParser.SQUARE_R = 16;
ArrobaParser.CARET = 17;
ArrobaParser.PLUS = 18;
ArrobaParser.MINUS = 19;
ArrobaParser.MODULO = 20;
ArrobaParser.TIMES = 21;
ArrobaParser.DIVIDE = 22;
ArrobaParser.SUMMA = 23;
ArrobaParser.BITWISE_AND = 24;
ArrobaParser.BITWISE_OR = 25;
ArrobaParser.BITWISE_NOT = 26;
ArrobaParser.BITWISE_SHL = 27;
ArrobaParser.BITWISE_SHR = 28;
ArrobaParser.BITWISE_XOR = 29;
ArrobaParser.IF = 30;
ArrobaParser.ELIF = 31;
ArrobaParser.ELSE = 32;
ArrobaParser.IS = 33;
ArrobaParser.NOT = 34;
ArrobaParser.EXCLAMATION = 35;
ArrobaParser.AND = 36;
ArrobaParser.OR = 37;
ArrobaParser.LT = 38;
ArrobaParser.LTE = 39;
ArrobaParser.GT = 40;
ArrobaParser.GTE = 41;
ArrobaParser.FALSE = 42;
ArrobaParser.TRUE = 43;
ArrobaParser.AWAIT = 44;
ArrobaParser.BREAK = 45;
ArrobaParser.CATCH = 46;
ArrobaParser.EXTERN = 47;
ArrobaParser.FN = 48;
ArrobaParser.LOCAL = 49;
ArrobaParser.RET = 50;
ArrobaParser.THROW = 51;
ArrobaParser.TRY = 52;
ArrobaParser.WHILE = 53;
ArrobaParser.DBL = 54;
ArrobaParser.HEX = 55;
ArrobaParser.INT = 56;
ArrobaParser.RAW_STRING = 57;
ArrobaParser.STRING = 58;
ArrobaParser.REGEX_LITERAL = 59;
ArrobaParser.ID = 60;

ArrobaParser.RULE_compilationUnit = 0;
ArrobaParser.RULE_stmt = 1;
ArrobaParser.RULE_assignStmt = 2;
ArrobaParser.RULE_exprStmt = 3;
ArrobaParser.RULE_breakStmt = 4;
ArrobaParser.RULE_retStmt = 5;
ArrobaParser.RULE_throwStmt = 6;
ArrobaParser.RULE_tryStmt = 7;
ArrobaParser.RULE_whileStmt = 8;
ArrobaParser.RULE_externStmt = 9;
ArrobaParser.RULE_ifStmt = 10;
ArrobaParser.RULE_ifBlock = 11;
ArrobaParser.RULE_elifBlock = 12;
ArrobaParser.RULE_elseBlock = 13;
ArrobaParser.RULE_expr = 14;
ArrobaParser.RULE_paramSpec = 15;
ArrobaParser.RULE_arithmeticOperator = 16;
ArrobaParser.RULE_booleanOperator = 17;

function CompilationUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_compilationUnit;
    return this;
}

CompilationUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CompilationUnitContext.prototype.constructor = CompilationUnitContext;

CompilationUnitContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

CompilationUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitCompilationUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.CompilationUnitContext = CompilationUnitContext;

ArrobaParser.prototype.compilationUnit = function() {

    var localctx = new CompilationUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ArrobaParser.RULE_compilationUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 39;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ArrobaParser.ARR_FAT) | (1 << ArrobaParser.PAREN_L) | (1 << ArrobaParser.SQUARE_L) | (1 << ArrobaParser.IF))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (ArrobaParser.EXCLAMATION - 35)) | (1 << (ArrobaParser.FALSE - 35)) | (1 << (ArrobaParser.TRUE - 35)) | (1 << (ArrobaParser.AWAIT - 35)) | (1 << (ArrobaParser.BREAK - 35)) | (1 << (ArrobaParser.EXTERN - 35)) | (1 << (ArrobaParser.FN - 35)) | (1 << (ArrobaParser.LOCAL - 35)) | (1 << (ArrobaParser.RET - 35)) | (1 << (ArrobaParser.THROW - 35)) | (1 << (ArrobaParser.TRY - 35)) | (1 << (ArrobaParser.WHILE - 35)) | (1 << (ArrobaParser.DBL - 35)) | (1 << (ArrobaParser.HEX - 35)) | (1 << (ArrobaParser.INT - 35)) | (1 << (ArrobaParser.RAW_STRING - 35)) | (1 << (ArrobaParser.STRING - 35)) | (1 << (ArrobaParser.REGEX_LITERAL - 35)) | (1 << (ArrobaParser.ID - 35)))) !== 0)) {
            this.state = 36;
            this.stmt();
            this.state = 41;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.assignStmt = function() {
    return this.getTypedRuleContext(AssignStmtContext,0);
};

StmtContext.prototype.exprStmt = function() {
    return this.getTypedRuleContext(ExprStmtContext,0);
};

StmtContext.prototype.ifStmt = function() {
    return this.getTypedRuleContext(IfStmtContext,0);
};

StmtContext.prototype.breakStmt = function() {
    return this.getTypedRuleContext(BreakStmtContext,0);
};

StmtContext.prototype.retStmt = function() {
    return this.getTypedRuleContext(RetStmtContext,0);
};

StmtContext.prototype.throwStmt = function() {
    return this.getTypedRuleContext(ThrowStmtContext,0);
};

StmtContext.prototype.tryStmt = function() {
    return this.getTypedRuleContext(TryStmtContext,0);
};

StmtContext.prototype.whileStmt = function() {
    return this.getTypedRuleContext(WhileStmtContext,0);
};

StmtContext.prototype.externStmt = function() {
    return this.getTypedRuleContext(ExternStmtContext,0);
};

StmtContext.prototype.SEMI = function() {
    return this.getToken(ArrobaParser.SEMI, 0);
};

StmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterStmt(this);
	}
};

StmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitStmt(this);
	}
};

StmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.StmtContext = StmtContext;

ArrobaParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ArrobaParser.RULE_stmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 51;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.state = 42;
            this.assignStmt();
            break;

        case 2:
            this.state = 43;
            this.exprStmt();
            break;

        case 3:
            this.state = 44;
            this.ifStmt();
            break;

        case 4:
            this.state = 45;
            this.breakStmt();
            break;

        case 5:
            this.state = 46;
            this.retStmt();
            break;

        case 6:
            this.state = 47;
            this.throwStmt();
            break;

        case 7:
            this.state = 48;
            this.tryStmt();
            break;

        case 8:
            this.state = 49;
            this.whileStmt();
            break;

        case 9:
            this.state = 50;
            this.externStmt();
            break;

        }
        this.state = 54;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 53;
            this.match(ArrobaParser.SEMI);

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_assignStmt;
    this.left = null; // ExprContext
    this.right = null; // ExprContext
    return this;
}

AssignStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignStmtContext.prototype.constructor = AssignStmtContext;

AssignStmtContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};

AssignStmtContext.prototype.ARR_L = function() {
    return this.getToken(ArrobaParser.ARR_L, 0);
};

AssignStmtContext.prototype.EQUALS = function() {
    return this.getToken(ArrobaParser.EQUALS, 0);
};

AssignStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterAssignStmt(this);
	}
};

AssignStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitAssignStmt(this);
	}
};

AssignStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitAssignStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.AssignStmtContext = AssignStmtContext;

ArrobaParser.prototype.assignStmt = function() {

    var localctx = new AssignStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ArrobaParser.RULE_assignStmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 56;
        localctx.left = this.expr(0);
        this.state = 57;
        _la = this._input.LA(1);
        if(!(_la===ArrobaParser.ARR_L || _la===ArrobaParser.EQUALS)) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
        this.state = 58;
        localctx.right = this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_exprStmt;
    return this;
}

ExprStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprStmtContext.prototype.constructor = ExprStmtContext;

ExprStmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ExprStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterExprStmt(this);
	}
};

ExprStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitExprStmt(this);
	}
};

ExprStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitExprStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.ExprStmtContext = ExprStmtContext;

ArrobaParser.prototype.exprStmt = function() {

    var localctx = new ExprStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ArrobaParser.RULE_exprStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 60;
        this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BreakStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_breakStmt;
    return this;
}

BreakStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BreakStmtContext.prototype.constructor = BreakStmtContext;

BreakStmtContext.prototype.BREAK = function() {
    return this.getToken(ArrobaParser.BREAK, 0);
};

BreakStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterBreakStmt(this);
	}
};

BreakStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitBreakStmt(this);
	}
};

BreakStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitBreakStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.BreakStmtContext = BreakStmtContext;

ArrobaParser.prototype.breakStmt = function() {

    var localctx = new BreakStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ArrobaParser.RULE_breakStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.match(ArrobaParser.BREAK);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RetStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_retStmt;
    return this;
}

RetStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RetStmtContext.prototype.constructor = RetStmtContext;

RetStmtContext.prototype.RET = function() {
    return this.getToken(ArrobaParser.RET, 0);
};

RetStmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

RetStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterRetStmt(this);
	}
};

RetStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitRetStmt(this);
	}
};

RetStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitRetStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.RetStmtContext = RetStmtContext;

ArrobaParser.prototype.retStmt = function() {

    var localctx = new RetStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ArrobaParser.RULE_retStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 64;
        this.match(ArrobaParser.RET);
        this.state = 65;
        this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ThrowStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_throwStmt;
    return this;
}

ThrowStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ThrowStmtContext.prototype.constructor = ThrowStmtContext;

ThrowStmtContext.prototype.THROW = function() {
    return this.getToken(ArrobaParser.THROW, 0);
};

ThrowStmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ThrowStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterThrowStmt(this);
	}
};

ThrowStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitThrowStmt(this);
	}
};

ThrowStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitThrowStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.ThrowStmtContext = ThrowStmtContext;

ArrobaParser.prototype.throwStmt = function() {

    var localctx = new ThrowStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ArrobaParser.RULE_throwStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.match(ArrobaParser.THROW);
        this.state = 68;
        this.expr(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TryStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ArrobaParser.RULE_tryStmt;
    this._stmt = null; // StmtContext
    this.toTry = []; // of StmtContexts
    this.toCatch = []; // of StmtContexts
    return this;
}

TryStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TryStmtContext.prototype.constructor = TryStmtContext;

TryStmtContext.prototype.TRY = function() {
    return this.getToken(ArrobaParser.TRY, 0);
};

TryStmtContext.prototype.CURLY_L = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ArrobaParser.CURLY_L);
    } else {
        return this.getToken(ArrobaParser.CURLY_L, i);
    }
};


TryStmtContext.prototype.CURLY_R = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ArrobaParser.CURLY_R);
    } else {
        return this.getToken(ArrobaParser.CURLY_R, i);
    }
};


TryStmtContext.prototype.CATCH = function() {
    return this.getToken(ArrobaParser.CATCH, 0);
};

TryStmtContext.prototype.PAREN_L = function() {
    return this.getToken(ArrobaParser.PAREN_L, 0);
};

TryStmtContext.prototype.PAREN_R = function() {
    return this.getToken(ArrobaParser.PAREN_R, 0);
};

TryStmtContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

TryStmtContext.prototype.ID = function() {
    return this.getToken(ArrobaParser.ID, 0);
};

TryStmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.enterTryStmt(this);
	}
};

TryStmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof ArrobaListener ) {
        listener.exitTryStmt(this);
	}
};

TryStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ArrobaVisitor ) {
        return visitor.visitTryStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ArrobaParser.TryStmtContext = TryStmtContext;

ArrobaParser.prototype.tryStmt = function() {

    var localctx = new TryStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ArrobaParser.RULE_tryStmt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.state = 70;
            this.match(ArrobaParser.TRY);
            this.state = 71;
            localctx._stmt = this.stmt();
            localctx.toTry.push(localctx._stmt);
            break;

        case 2:
            this.state = 72;
            this.match(ArrobaParser.TRY);
            this.state = 73;
            this.match(ArrobaParser.CURLY_L);
            this.state = 77;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ArrobaParser.ARR_FAT) | (1 << ArrobaParser.PAREN_L) | (1 << ArrobaParser.SQUARE_L) | (1 << ArrobaParser.IF))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (ArrobaParser.EXCLAMATION - 35)) | (1 << (ArrobaParser.FALSE - 35)) | (1 << (ArrobaParser.TRUE - 35)) | (1 << (ArrobaParser.AWAIT - 35)) | (1 << (ArrobaParser.BREAK - 35)) | (1 << (ArrobaParser.EXTERN - 35)) | (1 << (ArrobaParser.FN - 35)) | (1 << (ArrobaParser.LOCAL - 35)) | (1 << (ArrobaParser.RET - 35)) | (1 << (ArrobaParser.THROW - 35)) | (1 << (ArrobaParser.TRY - 35)) | (1 << (ArrobaParser.WHILE - 35)) | (1 << (ArrobaParser.DBL - 35)) | (1 << (ArrobaParser.HEX - 35)) | (1 << (ArrobaParser.INT - 35)) | (1 << (ArrobaParser.RAW_STRING - 35)) | (1 << (ArrobaParser.STRING - 35)) | (1 << (ArrobaParser.REGEX_LITERAL - 35)) | (1 << (ArrobaParser.ID - 35)))) !== 0)) {
                this.state = 74;
                localctx._stmt = this.stmt();
                localctx.toTry.push(localctx._stmt);
                this.state = 79;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 80;
            this.match(ArrobaParser.CURLY_R);
            break;

        }
        this.state = 104;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.state = 83;
            this.match(ArrobaParser.CATCH);
            this.state = 84;
            this.match(ArrobaParser.PAREN_L);
            this.state = 86;
            _la = this._input.LA(1);
            if(_la===ArrobaParser.ID) {
                this.state = 85;
                this.match(ArrobaParser.ID);
            }
